@@ -4,4 +4,3 @@ The following is a list of planned expansions for HighLine, in no particular
 order.
 
 * Add an easy-access help system for menus.
-* Consider the addition of a character limit for input option.
